# CPP_Exercises

./: CMakeLists.txt  ex1-tp4.cpp  ex1-tp4.hpp  tp3
resources/Revision/: Exo5.cpp  Person.cpp  Person.hpp  PersonArray.hpp  Stack.cpp  Stack.hpp  Student.hpp  Sujet.md
tp1/ex1/: bonjour  main.cpp
tp1/ex2/: Person.cpp  Person.hpp  main.cpp  person
tp1/ex3/: hello  reponses.txt
tp10/: CMakeLists.txt
tp10/src/: blend  blend.cpp  image  image.hpp  mandelbrot  pixels.hpp  transparency
tp11/src/: fact  factory  factory.cpp  tostring  tostring.cpp
tp12/backup/ex2-00-hybrid_array/: HybridArray.hpp
tp12/backup/ex2-01-static_size/: HybridArray.hpp
tp12/backup/ex2-02-push_back/: HybridArray.hpp
tp12/backup/ex2-03-size/: HybridArray.hpp
tp12/ex1/src/: qcm.hpp
tp2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  card  game  main.cpp
tp3/: ex2  ex2.cpp  exo1.md  exo2.md  main.cpp
tp3/3-hrsoft/: CMakeCache.txt  HRSoftMain.cpp  Makefile  cmake_install.cmake
tp5/: exo1.md  tp5-ex1.cpp
tp5/2-ptr/: CopyablePtr.hpp  Object.hpp  main.cpp
tp5/ex2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  Tracker.hpp
tp5/ex3/: Link.cpp  Link.hpp  LinkedList.cpp  LinkedList.hpp
tp6/: CMakeLists.txt
tp6/1-recipes/: Material.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.hpp  main.cpp
tp6/2-ptr/: CopyablePtr.hpp  main.cpp
tp7/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Potion.cpp  Potion.hpp  Trap.hpp
tp8/: CMakeLists.txt
tp9/: Point2d.cpp  Point3d.cpp  TP9.md  ex2_4.cpp  exo1.md  exo2.cpp  exo2_2.cpp  exo2_3.cpp  point  point2d  point3d
(+43 files in other folders)
